--- a/style.sty
+++ b/style.sty
@@ -6,18 +6,24 @@
 	open          = any,
 	DIV           = 8,
 	fontsize      = 12pt,
-	chapterprefix = true,
 	numbers       = noenddot,
 	bibliography  = totoc
 }
 
-\counterwithout{subsection}{section}
-\counterwithin{subsection}{chapter}
-\renewcommand{\thechapter}{\Roman{chapter}}
-\renewcommand{\thesection}{\arabic{section}}
-\renewcommand{\thesubsection}{Exercise~\thesection.\arabic{subsection}}
-\renewcommand{\thesubsubsection}{(\alph{subsubsection})}
-\renewcommand{\theeverything}{\thechapter.\Alph{everything}}
+\renewcommand{\partformat}{Chapter~\thepart\autodot}
+%                original: \partname~\thepart\autodot
+\counterwithin{chapter}{part}
+\counterwithin{section}{chapter}
+\renewcommand{\thechapter}{\arabic{chapter}}
+\renewcommand{\thesection}{Exercise~\thepart.\thechapter.\arabic{section}}
+\renewcommand{\thesubsection}{(\alph{subsection})}
+\renewcommand{\theeverything}{\thepart.\Alph{everything}}
 
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{2}
+
+% functions
+\DeclareMathOperator{\dist}{dist}
+
+% differentials
+\newcommand{\dd}[1]{\mathop{}\mathrm{d}#1}
