Make titles use lining numbers.

--- a/style.sty
+++ b/style.sty
@@ -10,6 +10,8 @@
 	bibliography  = totoc
 }
 
+\addtokomafont{disposition}{\addfontfeatures{Numbers = Lining}}
+
 \renewcommand{\partformat}{Chapter~\thepart\autodot}
 %                original: \partname~\thepart\autodot
 \counterwithin{chapter}{part}
