Add a solution to Exercise I.2.3.
This solution is rough and will need reworking in the future.

--- a/style.sty
+++ b/style.sty
@@ -26,5 +26,8 @@
 % functions
 \DeclareMathOperator{\dist}{dist}
 
+% fonts
+\newcommand{\basis}{\mathbf}
+
 % differentials
 \newcommand{\dd}[1]{\mathop{}\mathrm{d}#1}
