--- a/style.sty
+++ b/style.sty
@@ -24,6 +24,7 @@
 \setcounter{tocdepth}{2}
 
 % functions and operators
+\DeclareMathOperator{\ball}{B}
 \DeclareMathOperator{\dist}{dist}
 \AtBeginDocument{
 	\renewcommand{\int}{\operatorname{int}}
