--- a/style.sty
+++ b/style.sty
@@ -23,6 +23,9 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{2}
 
+% words
+\newcommand{\nth}[1]{#1\nobreakdash-th}
+
 % functions and operators
 \DeclareMathOperator{\ball}{B}
 \DeclareMathOperator{\dist}{dist}
