Add a solution to Exercise I.5.1.

--- a/style.sty
+++ b/style.sty
@@ -36,10 +36,13 @@
 % fonts
 \newcommand{\basis}{\mathbf}
 
-% differentials
-\newcommand{\dd}[1]{\mathop{}\mathrm{d}#1}
-
 % decorations
 \AtBeginDocument{
 	\renewcommand{\closure}{\overline}
 }
+
+% differentials
+\newcommand{\dd}[1]{\mathop{}\mathrm{d}#1}
+
+% separation axioms
+\newcommand{\Tax}[1]{T\textsubscript{\raisebox{0.15em}{#1}}}
