Add a solution to Exercise I.5.2.

--- a/style.sty
+++ b/style.sty
@@ -25,6 +25,7 @@
 
 % words
 \newcommand{\nth}[1]{#1\nobreakdash-th}
+\newcommand{\spacespace}[1]{#1\nobreakdash-space}
 
 % functions and operators
 \DeclareMathOperator{\ball}{B}
