Add a solution to Exercise I.5.4.

--- a/style.sty
+++ b/style.sty
@@ -1,6 +1,8 @@
 \usepackage{customtex}
 \bibliography{bibliography/references.bib}
 
+\usetikzlibrary{patterns}
+
 \KOMAoptions{
 	twoside       = semi,
 	open          = any,
