Add a solution to Exercise I.8.8.

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,8 @@
 	\include{chapters/1-general-topology.tex}
 
 \backmatter
+\setlength{\emergencystretch}{1em}
+\hbadness=2000
 \printbibliography
 
 \end{document}
