--- a/style.sty
+++ b/style.sty
@@ -26,6 +26,7 @@
 \setcounter{tocdepth}{2}
 
 % words
+\newcommand{\axis}[1]{#1\nobreakdash-axis}
 \newcommand{\nth}[1]{#1\nobreakdash-th}
 \newcommand{\spacespace}[1]{#1\nobreakdash-space}
 
