Add a solution to Exercise I.12.1.

--- a/style.sty
+++ b/style.sty
@@ -32,6 +32,7 @@
 
 % functions and operators
 \DeclareMathOperator{\ball}{B}
+\newcommand{\cball}{\overline{\operatorname{B}}}
 \DeclareMathOperator{\dist}{dist}
 \AtBeginDocument{
 	\renewcommand{\int}{\operatorname{int}}
