Add a solution to Exercise I.12.2.

--- a/style.sty
+++ b/style.sty
@@ -37,9 +37,11 @@
 \AtBeginDocument{
 	\renewcommand{\int}{\operatorname{int}}
 }
+\DeclareMathOperator{\supp}{supp}
 
 % fonts
 \newcommand{\basis}{\mathbf}
+\newcommand{\cover}{\mathbf}
 
 % decorations
 \AtBeginDocument{
