Add a solution to Exercise I.13.2.

--- a/style.sty
+++ b/style.sty
@@ -29,6 +29,7 @@
 \newcommand{\axis}[1]{#1\nobreakdash-axis}
 \newcommand{\nth}[1]{#1\nobreakdash-th}
 \newcommand{\spacespace}[1]{#1\nobreakdash-space}
+\newcommand{\spacesspaces}[1]{#1\nobreakdash-spaces}
 
 % functions and operators
 \DeclareMathOperator{\ball}{B}
