Add a solution to Exercise I.13.3.

--- a/style.sty
+++ b/style.sty
@@ -38,6 +38,8 @@
 \AtBeginDocument{
 	\renewcommand{\int}{\operatorname{int}}
 }
+\DeclareMathOperator{\mcone}{M}
+\DeclareMathOperator{\mcyl}{C}
 \DeclareMathOperator{\supp}{supp}
 
 % fonts
