Add a solution to Exercise I.14.8.

--- a/style.sty
+++ b/style.sty
@@ -44,6 +44,7 @@
 
 % functions and operators
 \DeclareMathOperator{\dist}{dist}
+\renewcommand{\id}{1}
 \AtBeginDocument{
 	\renewcommand{\int}{\operatorname{int}}
 }
