Add a solution to Exercise I.15.7.

--- a/style.sty
+++ b/style.sty
@@ -41,6 +41,9 @@
 \DeclareMathOperator{\mcone}{M}
 \DeclareMathOperator{\mcyl}{C}
 \newcommand{\sphere}{\mathrm{S}}
+\newcommand{\SOrt}{\mathrm{SO}}
+\newcommand{\SUni}{\mathrm{SU}}
+\newcommand{\Symp}{\mathrm{Sp}}
 
 % functions and operators
 \DeclareMathOperator{\dist}{dist}
