Add a solution to Exercise I.15.8.

--- a/style.sty
+++ b/style.sty
@@ -40,6 +40,7 @@
 \newcommand{\cball}{\overline{\operatorname{B}}}
 \DeclareMathOperator{\mcone}{M}
 \DeclareMathOperator{\mcyl}{C}
+\newcommand{\Ort}{\mathrm{O}}
 \newcommand{\sphere}{\mathrm{S}}
 \newcommand{\SOrt}{\mathrm{SO}}
 \newcommand{\SUni}{\mathrm{SU}}
