Add a solution to Exercise I.15.9.

--- a/style.sty
+++ b/style.sty
@@ -41,6 +41,7 @@
 \DeclareMathOperator{\mcone}{M}
 \DeclareMathOperator{\mcyl}{C}
 \newcommand{\Ort}{\mathrm{O}}
+\newcommand{\Uni}{\mathrm{U}}
 \newcommand{\sphere}{\mathrm{S}}
 \newcommand{\SOrt}{\mathrm{SO}}
 \newcommand{\SUni}{\mathrm{SU}}
