Change the font for spheres.

--- a/style.sty
+++ b/style.sty
@@ -42,7 +42,7 @@
 \DeclareMathOperator{\mcyl}{C}
 \newcommand{\Ort}{\mathrm{O}}
 \newcommand{\Uni}{\mathrm{U}}
-\newcommand{\sphere}{\mathrm{S}}
+\newcommand{\sphere}{𝕊}
 \newcommand{\SOrt}{\mathrm{SO}}
 \newcommand{\SUni}{\mathrm{SU}}
 \newcommand{\Symp}{\mathrm{Sp}}
