Add a solution to Exercise I.15.11.

--- a/style.sty
+++ b/style.sty
@@ -35,17 +35,19 @@
 \newcommand{\spacespace}[1]{#1\nobreakdash-space}
 \newcommand{\spacesspaces}[1]{#1\nobreakdash-spaces}
 
-% spaces
+% spaces and such
 \DeclareMathOperator{\ball}{B}
 \newcommand{\cball}{\overline{\operatorname{B}}}
+\newcommand{\CProj}{ℂ\mathrm{P}}
 \DeclareMathOperator{\mcone}{M}
 \DeclareMathOperator{\mcyl}{C}
 \newcommand{\Ort}{\mathrm{O}}
-\newcommand{\Uni}{\mathrm{U}}
+\newcommand{\RProj}{ℝ\mathrm{P}}
 \newcommand{\sphere}{𝕊}
 \newcommand{\SOrt}{\mathrm{SO}}
 \newcommand{\SUni}{\mathrm{SU}}
 \newcommand{\Symp}{\mathrm{Sp}}
+\newcommand{\Uni}{\mathrm{U}}
 
 % functions and operators
 \DeclareMathOperator{\dist}{dist}
