Add a solution to Exercise I.15.12.

--- a/style.sty
+++ b/style.sty
@@ -34,6 +34,7 @@
 \newcommand{\nth}[1]{#1\nobreakdash-th}
 \newcommand{\spacespace}[1]{#1\nobreakdash-space}
 \newcommand{\spacesspaces}[1]{#1\nobreakdash-spaces}
+\newcommand{\vectorspace}[1]{#1\nobreakdash-vector space}
 
 % spaces and such
 \DeclareMathOperator{\ball}{B}
